--- a/pbiviz/package.json
+++ b/pbiviz/package.json
@@ -9,9 +9,12 @@
         "test": "pbiviz package --resources --no-minify --no-pbiviz"
     },
     "dependencies": {
+        "@apache-arrow/ts": "^6.0.0",
         "@types/jquery": "^3.5.8",
+        "apache-arrow": "^6.0.0",
         "jquery": "^3.6.0",
-        "regenerator-runtime": "^0.13.9"
+        "regenerator-runtime": "^0.13.9",
+        "uuid": "^7.0.2"
     },
     "devDependencies": {
         "@types/d3": "5.7.2",
