--- a/pbiviz/.eslintrc.json
+++ b/pbiviz/.eslintrc.json
@@ -3,16 +3,27 @@
         "eslint:recommended",
         "plugin:@typescript-eslint/recommended",
         "airbnb",
+        "airbnb-typescript",
         "prettier"
     ],
     "parser": "@typescript-eslint/parser",
-    "plugins": ["@typescript-eslint"],
+    "plugins": ["@typescript-eslint", "prettier"],
     "rules": {
-        "@typescript-eslint/indent": ["error", 2],
+        "@typescript-eslint/no-explicit-any": "off",
+        "@typescript-eslint/no-inferrable-types": "off",
         "@typescript-eslint/no-unused-vars": "error",
-        "@typescript-eslint/no-explicit-any": "error"
+        "class-methods-use-this": "off",
+        "import/no-extraneous-dependencies": ["error", {"devDependencies": true}],
+        "import/prefer-default-export": "off",
+        "no-console": "off",
+        "no-underscore-dangle": "off",
+        "prettier/prettier": "error"
     },
     "env": {
         "browser": true
+    },
+    "parserOptions": {
+        "sourceType": "module",
+        "project": "./tsconfig.json"
     }
 }
