--- a/pbiviz/package.json
+++ b/pbiviz/package.json
@@ -18,6 +18,7 @@
         "@types/react": "^17.0.37",
         "@types/react-dom": "^17.0.11",
         "jquery": "3.6.0",
+        "powerbi-visuals-utils-dataviewutils": "2.4.1",
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "regenerator-runtime": "0.13.9",
@@ -28,11 +29,11 @@
         "@typescript-eslint/parser": "5.4.0",
         "eslint": "8.3.0",
         "eslint-config-airbnb": "19.0.1",
+        "eslint-config-airbnb-typescript": "^16.0.0",
         "eslint-config-prettier": "8.3.0",
         "eslint-plugin-prettier": "4.0.0",
         "powerbi-visuals-api": "~3.8.0",
         "powerbi-visuals-tools": "3.3.2",
-        "powerbi-visuals-utils-dataviewutils": "2.4.1",
         "powerbi-visuals-utils-formattingutils": "4.7.1",
         "powerbi-visuals-utils-interactivityutils": "5.7.1",
         "powerbi-visuals-utils-tooltiputils": "2.5.2",
