--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,12 +18,19 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    env:
+      PBI_TEST_PUBLIC_CERTIFICATE: ${{ secrets.PBI_TEST_PUBLIC_CERTIFICATE }}
+      PBI_TEST_PRIVATE_KEY: ${{ secrets.PBI_TEST_PRIVATE_KEY }}
+      CERTS_PATH: ./certs
+
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
+    - name: certs
+      run: |
+        mkdir -p certs
+        echo "${PBI_TEST_PUBLIC_CERTIFICATE}" > certs/PowerBICustomVisualTest_public.crt
+        echo "${PBI_TEST_PRIVATE_KEY}" > certs/PowerBICustomVisualTest_private.key
+        touch certs/blank
     - name: build
       run: ./dc.sh build pbi
     - name: lint
@@ -31,13 +38,4 @@ jobs:
     - name: test
       run: ./bin/test.sh
     - name: bundle
-      env:
-        PBI_TEST_PUBLIC_CERTIFICATE: ${{ secrets.PBI_TEST_PUBLIC_CERTIFICATE }}
-        PBI_TEST_PRIVATE_KEY: ${{ secrets.PBI_TEST_PRIVATE_KEY }}
-        CERTS_PATH: ./certs
-      run: |
-        mkdir -p certs
-        echo "${PBI_TEST_PUBLIC_CERTIFICATE}" > certs/PowerBICustomVisualTest_public.crt
-        echo "${PBI_TEST_PRIVATE_KEY}" > certs/PowerBICustomVisualTest_private.key
-        touch certs/blank
-        ./bin/package.sh
+      run: ./bin/package.sh
