--- a/pbiviz/package.json
+++ b/pbiviz/package.json
@@ -20,7 +20,7 @@
     "dependencies": {
         "@graphistry/client-api-react": "4.0.0-beta.5",
         "jquery": "3.6.0",
-        "powerbi-visuals-api": "~3.8.0",
+        "powerbi-visuals-api": "^3.8.4",
         "powerbi-visuals-utils-dataviewutils": "2.4.1",
         "react": "17.0.2",
         "react-dom": "17.0.2",
