--- a/pbiviz/package.json
+++ b/pbiviz/package.json
@@ -37,6 +37,7 @@
         "eslint-config-airbnb-typescript": "^16.0.0",
         "eslint-config-prettier": "8.3.0",
         "eslint-plugin-prettier": "4.0.0",
+        "eslint-plugin-react": "^7.29.4",
         "powerbi-visuals-tools": "3.3.2",
         "powerbi-visuals-utils-formattingutils": "4.7.1",
         "powerbi-visuals-utils-interactivityutils": "5.7.1",
