--- a/pbiviz/package.json
+++ b/pbiviz/package.json
@@ -8,7 +8,7 @@
         "lint": "npm run eslint && npm run lint:ts && npm run lint:less",
         "lint:ts": "node node_modules/tslint/bin/tslint -r \"node_modules/tslint-microsoft-contrib\" \"+(src|test)/**/*.ts?\"",
         "lint:less": "stylelint -s less \"style/**/*.less\"",
-        "lock:fix": "npm i --package-lock-only",
+        "lock:fix": "npm i --package-lock-only --legacy-peer-deps",
         "package": "pbiviz package",
         "pbiviz": "pbiviz",
         "prettier": "prettier 'src/**/*.ts'",
@@ -20,7 +20,7 @@
     "dependencies": {
         "@graphistry/client-api-react": "4.0.0-beta.5",
         "jquery": "3.6.0",
-        "powerbi-visuals-api": "~3.8.0",
+        "powerbi-visuals-api": "~4.0.0",
         "powerbi-visuals-utils-dataviewutils": "2.4.1",
         "react": "17.0.2",
         "react-dom": "17.0.2",
@@ -30,21 +30,22 @@
         "@types/jquery": "^3.5.9",
         "@types/react": "17.0.37",
         "@types/react-dom": "17.0.11",
-        "@typescript-eslint/eslint-plugin": "5.4.0",
-        "@typescript-eslint/parser": "5.4.0",
-        "eslint": "8.3.0",
-        "eslint-config-airbnb": "19.0.1",
-        "eslint-config-airbnb-typescript": "^16.0.0",
-        "eslint-config-prettier": "8.3.0",
+        "@typescript-eslint/eslint-plugin": "5.22.0",
+        "@typescript-eslint/parser": "5.22.0",
+        "eslint": "8.14.0",
+        "eslint-config-airbnb": "19.0.4",
+        "eslint-config-airbnb-typescript": "^17.0.0",
+        "eslint-config-prettier": "8.5.0",
         "eslint-plugin-prettier": "4.0.0",
-        "powerbi-visuals-tools": "3.3.2",
+        "powerbi-visuals-tools": "4.0.5",
         "powerbi-visuals-utils-formattingutils": "4.7.1",
         "powerbi-visuals-utils-interactivityutils": "5.7.1",
         "powerbi-visuals-utils-tooltiputils": "2.5.2",
-        "prettier": "2.5.0",
+        "postcss": "8.4.13",
+        "prettier": "2.6.2",
         "tslint": "^5.20.1",
         "tslint-config-prettier": "^1.18.0",
         "tslint-microsoft-contrib": "^6.2.0",
-        "typescript": "4.5.2"
+        "typescript": "^4.6.4"
     }
 }
