--- a/pbiviz/package.json
+++ b/pbiviz/package.json
@@ -20,6 +20,7 @@
     "dependencies": {
         "@graphistry/client-api-react": "4.0.0-beta.5",
         "jquery": "3.6.0",
+
         "powerbi-visuals-api": "~4.0.0",
         "powerbi-visuals-utils-dataviewutils": "2.4.1",
         "react": "17.0.2",
@@ -35,6 +36,8 @@
         "eslint": "8.14.0",
         "eslint-config-airbnb": "19.0.4",
         "eslint-config-airbnb-typescript": "^17.0.0",
+        "eslint-plugin-react": "7.29.4",
+        "eslint-plugin-react-hooks": "4.5.0",
         "eslint-config-prettier": "8.5.0",
         "eslint-plugin-prettier": "4.0.0",
         "powerbi-visuals-tools": "4.0.5",
