fix(package.json): added eslint plugins

--- a/pbiviz/package.json
+++ b/pbiviz/package.json
@@ -3,16 +3,16 @@
     "version": "0.1.0",
     "scripts": {
         "cert": "pbiviz --create-cert",
-        "eslint": "eslint 'src/**/*.ts'",
-        "eslint:fix": "eslint --fix 'src/**/*.ts'",
+        "eslint": "eslint \"src/**/*.ts\"",
+        "eslint:fix": "eslint --fix \"src/**/*.ts\"",
         "lint": "npm run eslint && npm run lint:ts && npm run lint:less",
         "lint:ts": "node node_modules/tslint/bin/tslint -r \"node_modules/tslint-microsoft-contrib\" \"+(src|test)/**/*.ts?\"",
         "lint:less": "stylelint -s less \"style/**/*.less\"",
         "lock:fix": "npm i --package-lock-only --legacy-peer-deps",
         "package": "pbiviz package",
         "pbiviz": "pbiviz",
-        "prettier": "prettier 'src/**/*.ts'",
-        "prettier:fix": "prettier --write 'src/**/*.ts'",
+        "prettier": "prettier \"src/**/*.ts\"",
+        "prettier:fix": "prettier --write \"src/**/*.ts\"",
         "start": "pbiviz start",
         "test": "pbiviz package --resources --no-minify --no-pbiviz",
         "tslint-check": "tslint-config-prettier-check ./tslint.json"
@@ -40,6 +40,8 @@
         "eslint-plugin-react-hooks": "4.5.0",
         "eslint-config-prettier": "8.5.0",
         "eslint-plugin-prettier": "4.0.0",
+        "eslint-plugin-jsx-a11y": "6.5.1",
+        "eslint-plugin-import": "2.26.0",
         "powerbi-visuals-tools": "4.0.5",
         "powerbi-visuals-utils-formattingutils": "4.7.1",
         "powerbi-visuals-utils-interactivityutils": "5.7.1",
