fix:(stylelint): updated syntax to customSyntax

--- a/pbiviz/package.json
+++ b/pbiviz/package.json
@@ -20,7 +20,6 @@
     "dependencies": {
         "@graphistry/client-api-react": "4.0.0-beta.5",
         "jquery": "3.6.0",
-
         "powerbi-visuals-api": "~4.0.0",
         "powerbi-visuals-utils-dataviewutils": "2.4.1",
         "react": "17.0.2",
@@ -36,18 +35,19 @@
         "eslint": "8.14.0",
         "eslint-config-airbnb": "19.0.4",
         "eslint-config-airbnb-typescript": "^17.0.0",
+        "eslint-config-prettier": "8.5.0",
+        "eslint-plugin-import": "2.26.0",
+        "eslint-plugin-jsx-a11y": "6.5.1",
+        "eslint-plugin-prettier": "4.0.0",
         "eslint-plugin-react": "7.29.4",
         "eslint-plugin-react-hooks": "4.5.0",
-        "eslint-config-prettier": "8.5.0",
-        "eslint-plugin-prettier": "4.0.0",
-        "eslint-plugin-jsx-a11y": "6.5.1",
-        "eslint-plugin-import": "2.26.0",
+        "postcss": "^8.4.13",
         "powerbi-visuals-tools": "4.0.5",
         "powerbi-visuals-utils-formattingutils": "4.7.1",
         "powerbi-visuals-utils-interactivityutils": "5.7.1",
         "powerbi-visuals-utils-tooltiputils": "2.5.2",
-        "postcss": "8.4.13",
         "prettier": "2.6.2",
+        "stylelint-config-standard": "^25.0.0",
         "tslint": "^5.20.1",
         "tslint-config-prettier": "^1.18.0",
         "tslint-microsoft-contrib": "^6.2.0",
