fix(dockerfile): added stylelint to dockerfile

--- a/pbiviz/Dockerfile
+++ b/pbiviz/Dockerfile
@@ -11,6 +11,7 @@ RUN --mount=type=cache,target=/var/cache/apt --mount=type=cache,target=/var/lib/
 #	&& rm -rf /var/cache/apt/*
 
 COPY package.json package-lock.json /opt/graphbi/pbiviz/
+COPY  extends stylelint-config-standard
 RUN --mount=type=cache,target=/usr/src/app/.npm \
     npm set cache /usr/src/app/.npm \
     && echo "=== Installing build tools ===" \
