--- a/pbiviz/package.json
+++ b/pbiviz/package.json
@@ -47,6 +47,7 @@
         "powerbi-visuals-utils-interactivityutils": "5.7.1",
         "powerbi-visuals-utils-tooltiputils": "2.5.2",
         "prettier": "2.6.2",
+        "stylelint": "14.8.2",
         "stylelint-config-standard": "^25.0.0",
         "tslint": "^5.20.1",
         "tslint-config-prettier": "^1.18.0",
