upgrade(stylelint): use new extension format

--- a/pbiviz/package.json
+++ b/pbiviz/package.json
@@ -7,7 +7,7 @@
         "eslint:fix": "eslint --fix \"src/**/*.ts\"",
         "lint": "npm run eslint && npm run lint:ts && npm run lint:less",
         "lint:ts": "node node_modules/tslint/bin/tslint -r \"node_modules/tslint-microsoft-contrib\" \"+(src|test)/**/*.ts?\"",
-        "lint:less": "stylelint -s less \"style/**/*.less\"",
+        "lint:less": "stylelint \"style/**/*.less\"",
         "lock:fix": "npm i --package-lock-only --legacy-peer-deps",
         "package": "pbiviz package",
         "pbiviz": "pbiviz",
@@ -42,6 +42,7 @@
         "eslint-plugin-react": "7.29.4",
         "eslint-plugin-react-hooks": "4.5.0",
         "postcss": "^8.4.13",
+        "postcss-less": "6.0.0",
         "powerbi-visuals-tools": "4.0.5",
         "powerbi-visuals-utils-formattingutils": "4.7.1",
         "powerbi-visuals-utils-interactivityutils": "5.7.1",
