--- a/pbiviz/package.json
+++ b/pbiviz/package.json
@@ -49,7 +49,7 @@
         "powerbi-visuals-utils-tooltiputils": "2.5.2",
         "prettier": "2.6.2",
         "stylelint": "14.8.2",
-        "stylelint-config-standard": "^25.0.0",
+        "stylelint-config-standard": "25.0.0",
         "tslint": "^5.20.1",
         "tslint-config-prettier": "^1.18.0",
         "tslint-microsoft-contrib": "^6.2.0",
