--- a/pbiviz/package.json
+++ b/pbiviz/package.json
@@ -53,6 +53,6 @@
         "tslint": "^5.20.1",
         "tslint-config-prettier": "^1.18.0",
         "tslint-microsoft-contrib": "^6.2.0",
-        "typescript": "^4.6.4"
+        "typescript": "4.6.4"
     }
 }
