--- a/pbiviz/package.json
+++ b/pbiviz/package.json
@@ -18,6 +18,7 @@
         "tslint-check": "tslint-config-prettier-check ./tslint.json"
     },
     "dependencies": {
+        "@graphistry/client-api": "^4.0.3-alpha.2",
         "@graphistry/client-api-react": "4.0.0-beta.5",
         "jquery": "3.6.0",
         "powerbi-visuals-api": "~4.0.0",
