--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -44,5 +44,9 @@ jobs:
     - name: Release
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
-      with:
+       with:
+          name: ${{ env.GH_RELEASE_TAG }}
+          tag_name: ${{ env.GH_RELEASE_TAG }}
+          draft: true
+          token: ${{ secrets.GITHUB_TOKEN }}
         files: ./dist/graphbi.${{ github.ref }}.pbiviz
