--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,6 +1,7 @@
 name: publish
 
 on:
+ workflow_dispatch:
   push:
     tags:
       - '[0-9]+.[0-9]+.[0-9]+**'
@@ -44,8 +45,4 @@ jobs:
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
       with:
-        name: ${{ env.GH_RELEASE_TAG }}
-        tag_name: ${{ env.GH_RELEASE_TAG }}
-        draft: true
-        token: ${{ secrets.GITHUB_TOKEN }}
-      files: ./dist/graphbi.${{ github.ref }}.pbiviz
+        files: ./dist/graphbi.${{ github.ref }}.pbiviz
