--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -40,8 +40,16 @@ jobs:
         ./bin/package.sh
         echo "github.ref: ${{ github.ref }}"
         find ./dist
+    - name: version envvars
+      run: |
+          echo "VERSION=$(cat VERSION)" >> $GITHUB_ENV
+          echo "VERSION_ENV=$(cat versions/VERSION_ENV)" >> $GITHUB_ENV
     - name: Release
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
       with:
+        name: ${{ env.GH_RELEASE_TAG }}
+        tag_name: ${{ env.GH_RELEASE_TAG }}
+        draft: true
+        token: ${{ secrets.GITHUB_TOKEN }}
         files: ./dist/graphbi.${{ github.ref }}.pbiviz
