--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,6 +25,13 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
+     - name: get most recent tag
+       run: |
+        echo "RELEASE_VERSION=$(git describe --tags --abbrev=0)" >> $GITHUB_ENV
+     - name: check env
+        run: |
+          echo $RELEASE_VERSION
+          echo ${{ env.RELEASE_VERSION }}
     - name: certs
       run: |
         mkdir -p certs
