--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -56,8 +56,8 @@ jobs:
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
       with:
-        name: ${{ env.GH_RELEASE_TAG }}
-        tag_name: ${{ env.GH_RELEASE_TAG }}
+        name: ${{ env.RELEASE_VERSION }}
+        tag_name: ${{ env.RELEASE_VERSION }}
         draft: true
         token: ${{ secrets.GITHUB_TOKEN }}
         files: ./dist/graphbi.${{ github.ref }}.pbiviz
