--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -46,6 +46,7 @@ jobs:
       run: ./bin/test.sh
     - name: bundle
       run: |
+        echo $RELEASE_VERSION
         ./bin/package.sh
         echo "github.ref: ${{ github.ref }}"
         find ./dist
