--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -39,7 +39,9 @@ jobs:
         echo "${PBI_TEST_PRIVATE_KEY}" > certs/PowerBICustomVisualTest_private.key
         touch certs/blank
     - name: build
-      run: ./dc.sh build pbi
+      run: |
+       ./dc.sh build pbi
+       echo $RELEASE_VERSION
     - name: lint
       run: ./bin/lint.sh
     - name: test
