fix(publish.yml): echos version not release ver

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -41,7 +41,7 @@ jobs:
     - name: build
       run: |
        ./dc.sh build pbi
-       echo $RELEASE_VERSION
+       echo $VERSION
     - name: lint
       run: ./bin/lint.sh
     - name: test
