--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -56,5 +56,7 @@ jobs:
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
       with:
+        name: ${{ env.RELEASE_VERSION }}
+        tag_name: ${{ env.RELEASE_VERSION }}
         token: ${{ secrets.GITHUB_TOKEN }}
         files: ./dist/graphbi.${{ github.ref }}
