--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -59,4 +59,6 @@ jobs:
         name: ${{ env.RELEASE_VERSION }}
         tag_name: ${{ env.RELEASE_VERSION }}
         token: ${{ secrets.GITHUB_TOKEN }}
-        files: ./dist/graphbi.${{ github.ref }}
+        files: |
+          ./dist/graphbi.${{ github.ref }}
+          ./dist/package.json
