--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -60,5 +60,5 @@ jobs:
         tag_name: ${{ env.RELEASE_VERSION }}
         token: ${{ secrets.GITHUB_TOKEN }}
         files: |
-          ./dist/graphbi.${{ github.ref }}
-          ./dist/package.json
+           ./opt/graphbi/pbiviz/dist/graphbi.${{ github.ref }}
+           ./opt/graphbi/pbiviz/dist/package.json
