--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -64,5 +64,5 @@ jobs:
         token: ${{ secrets.GITHUB_TOKEN }}
         files: |
            /home/runner/work/graphbi/graphbi/pbiviz/dist/graphbi.${{ github.ref }}
-           /home/runner/work/graphbi/graphbi/pbiviz/dist/Graphistry.${{ github.ref }}.pbiviz
+           /home/runner/work/graphbi/graphbi/pbiviz/dist/Graphistry.${{ env.RELEASE_VERSION }}.pbiviz
            /home/runner/work/graphbi/graphbi/pbiviz/dist/package.json
