fix(scan.yml): removed white space in path

--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -4,7 +4,7 @@ on:
   push:
     paths: [
       "/home/runner/work/graphbi/graphbi/graphbi/pbiviz/package-lock.json",
-     /home/runner/work/graphbi/graphbi/graphbi/pbiviz/package.json",
+      "/home/runner/work/graphbi/graphbi/graphbi/pbiviz/package.json",
       "/home/runner/work/graphbi/graphbi/graphbi/pbiviz/pbiviz.json"
     ]
     tags:
