fix(visual.ts): client.ts swap

--- a/pbiviz/package.json
+++ b/pbiviz/package.json
@@ -19,7 +19,7 @@
     },
     "dependencies": {
         "@graphistry/client-api": "^4.0.3-alpha.2",
-        "@graphistry/client-api-react": "4.0.0-beta.5",
+        "@graphistry/client-api-react": "^4.1.2",
         "jquery": "3.6.0",
         "powerbi-visuals-api": "~4.0.0",
         "powerbi-visuals-utils-dataviewutils": "2.4.1",
