--- a/pbiviz/.vscode/settings.json
+++ b/pbiviz/.vscode/settings.json
@@ -19,13 +19,19 @@
       "fileMatch": [
         "/pbiviz.json"
       ],
-      "url": "./.api/v2.5.0/schema.pbiviz.json"
+      "url": "./node_modules/powerbi-visuals-api/schema.pbiviz.json"
     },
     {
       "fileMatch": [
         "/capabilities.json"
       ],
-      "url": "./.api/v2.5.0/schema.capabilities.json"
+      "url": "./node_modules/powerbi-visuals-api/schema.capabilities.json"
+    },
+    {
+      "fileMatch": [
+        "/dependencies.json"
+      ],
+      "url": "./node_modules/powerbi-visuals-api/schema.dependencies.json"
     }
   ]
 }
