--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -52,7 +52,7 @@ jobs:
     - name: bundle
       run: |
         echo $RELEASE_VERSION
-        ./bin/package.sh
+        VERSION=$RELEASE_VERSION ./bin/package.sh
         echo "github.ref: ${{ github.ref }}"
         find ./dist
         echo “pwd: $(pwd)”
