--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -63,5 +63,5 @@ jobs:
         tag_name: ${{ env.RELEASE_VERSION }}
         token: ${{ secrets.GITHUB_TOKEN }}
         files: |
-          /Graphistry.${{ env.RELEASE_VERSION }}.pbiviz
+          Graphistry.${{ env.RELEASE_VERSION }}.pbiviz
           
