fix(bundling): js-upload-api dep and exports

--- a/pbiviz/tsconfig.json
+++ b/pbiviz/tsconfig.json
@@ -19,18 +19,28 @@
   },
   "files": [
     "src/visual.ts",
+    "src/components/Graphistry.tsx",
+    "src/components/Loader.tsx",
+    "src/components/Main.tsx",
     "src/localization/Localization.ts",
     "src/localization/localizationHelper.ts",
     "src/localization/localizedResources.ts",
     "src/services/GraphistryClient.ts",
     "src/services/GraphistryDataset.ts",
     "src/services/GraphistryFile.ts",
+    "src/settings/BackgroundSetting.ts",
+    "src/settings/ChartLoadSetting.ts",
+    "src/settings/EdgeSetting.ts",
+    "src/settings/LabelSetting.ts",
+    "src/settings/LayoutSetting.ts",
+    "src/settings/MenuSetting.ts",
+    "src/settings/NodeSetting.ts",
+    "src/settings/PanelSetting.ts",
+    "src/settings/PositionSetting.ts",
     "src/GraphistrySetting.ts",
     "src/LoadState.ts",
     "src/objectEnumerationUtility.ts",
-    "src/components/Graphistry.tsx",
-    "src/components/Loader.tsx",
-    "src/components/Main.tsx",
+    "src/visual.ts",
     "src/VisualSettings.ts"
   ]
 }
