--- a/pbiviz/.eslintrc.json
+++ b/pbiviz/.eslintrc.json
@@ -5,6 +5,7 @@
         "airbnb",
         "airbnb-typescript",
         "plugin:react/recommended",
+        "plugin:react/jsx-runtime",
         "prettier"
     ],
     "parser": "@typescript-eslint/parser",
