fix(package.json): enabled lint tsx

--- a/pbiviz/package.json
+++ b/pbiviz/package.json
@@ -3,8 +3,8 @@
     "version": "0.1.0",
     "scripts": {
         "cert": "pbiviz --create-cert",
-        "eslint": "eslint \"src/**/*.ts\"",
-        "eslint:fix": "eslint --fix \"src/**/*.ts\"",
+        "eslint": "eslint \"src/**/*.ts\" && eslint\"src/**/*.tsx\"",
+        "eslint:fix": "eslint --fix \"src/**/*.ts\" && eslint --fix \"src/**/*.tsx\"",
         "lint": "npm run eslint && npm run lint:ts && npm run lint:less",
         "lint:ts": "node node_modules/tslint/bin/tslint -r \"node_modules/tslint-microsoft-contrib\" \"+(src|test)/**/*.ts?\"",
         "lint:less": "stylelint \"style/**/*.less\"",
